RESOLVED FIXED283574
Web Inspector crashes due to using erroneous `PseudoElementIdentifier`
https://bugs.webkit.org/show_bug.cgi?id=283574
Summary Web Inspector crashes due to using erroneous `PseudoElementIdentifier`
Tim Nguyen (:ntim)
Reported 2024-11-22 09:34:19 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2024-11-22 09:37:13 PST
Tim Nguyen (:ntim)
Comment 2 2024-12-02 12:43:32 PST
EWS
Comment 3 2024-12-02 20:34:06 PST
Committed 287254@main (c303cfb174dd): <https://commits.webkit.org/287254@main> Reviewed commits have been landed. Closing PR #37335 and removing active labels.
EWS
Comment 4 2024-12-03 15:20:44 PST
Committed 283286.555@safari-7620-branch (90dea7fd2722): <https://commits.webkit.org/283286.555@safari-7620-branch> Reviewed commits have been landed. Closing PR #2367 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.