Web Inspector crashes due to using erroneous `PseudoElementIdentifier` https://bugs.webkit.org/show_bug.cgi?id=283574 rdar://140243623

Reviewed by NOBODY (OOPS!).

Use a correct PseudoElementIdentifier when getting styles for named view transition pseudo elements.

* LayoutTests/inspector/css/getMatchedStylesForNodeBackdropPseudoId.html:
* LayoutTests/inspector/css/getMatchedStylesForNodeViewTransitionPseudoElements-expected.txt: Added.
* LayoutTests/inspector/css/getMatchedStylesForNodeViewTransitionPseudoElements.html: Added.
* Source/WebCore/inspector/agents/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getMatchedStylesForNode):
(WebCore::InspectorCSSAgent::collectRulesForRuleMatchArray):
(WebCore::InspectorCSSAgent::buildArrayForMatchedRuleList): Deleted.
* Source/WebCore/inspector/agents/InspectorCSSAgent.h: